ctypes_canapedll/CANapAPI_stripped.h

typedef unsigned long DWORD;
enum eServiceStates
{
 e_Created  =10,             
 e_Running  =e_Created +10,  
 e_Finished =e_Running +10,  
 e_TimeOut  =e_Finished+10   
};
typedef unsigned long TAsap3DiagHdl;
struct DiagJobResponse
{
  char   *job_responsestring; 
  double  job_responseValue;  
};
struct DiagNumericParameter
{
 enum EnParamType DiagNumeric; 
 
 union PValues
 {
  int           IVal;  
  unsigned int  UIVal; 
  float         FVal;  
  double        DVal;  
 };
 union PValues Values;
};
struct tAsap3Hdl;
typedef struct tAsap3Hdl *TAsap3Hdl;
typedef unsigned short TModulHdl;
typedef unsigned long  TScriptHdl;
extern bool ASAP3_EXPORT CALL_CONV Asap3GetScriptResultString(TAsap3Hdl hdl,TScriptHdl hScript,char*resultString,DWORD *sizeofBuffer);
extern bool ASAP3_EXPORT CALL_CONV Asap3ReleaseScript(TAsap3Hdl hdl,TScriptHdl hScript) ;
extern bool ASAP3_EXPORT CALL_CONV Asap3DiagEnableTesterPresent(TAsap3Hdl hdl, TModulHdl module,bool enable);
extern bool ASAP3_EXPORT CALL_CONV Asap3DiagIsTesterPresentEnabled(TAsap3Hdl hdl, TModulHdl module, bool *enabled);
extern bool ASAP3_EXPORT CALL_CONV Asap3DiagExecuteJob(TAsap3Hdl hdl, TModulHdl module,char *job,char *commandline,bool reserved,struct DiagJobResponse** jobResponse);
extern bool ASAP3_EXPORT CALL_CONV Asap3DiagCreateRawRequest(TAsap3Hdl hdl, TModulHdl module,unsigned char *ServiceBytes,unsigned int length,TAsap3DiagHdl *hDiag);
extern bool ASAP3_EXPORT CALL_CONV Asap3DiagCreateRawRequest2(TAsap3Hdl hdl, TModulHdl module,unsigned char *Bytes,unsigned int length,TAsap3DiagHdl *hDiag);
extern bool ASAP3_EXPORT CALL_CONV Asap3DiagCreateSymbolicRequest(TAsap3Hdl hdl, TModulHdl module, char *ServiceName,TAsap3DiagHdl *hDiag);
extern bool ASAP3_EXPORT CALL_CONV Asap3DiagExecute(TAsap3Hdl hdl,TAsap3DiagHdl hDiag,int SupressPositiveResponse);
extern bool ASAP3_EXPORT CALL_CONV Asap3DiagGetServiceState(TAsap3Hdl hdl,TAsap3DiagHdl hDiag,enum eServiceStates *State);
extern bool ASAP3_EXPORT CALL_CONV Asap3DiagReleaseService(TAsap3Hdl hdl,TAsap3DiagHdl hDiag);
extern bool ASAP3_EXPORT CALL_CONV Asap3DiagSetStringParameter(TAsap3Hdl hdl,TAsap3DiagHdl hDiag,char* ParameterName,char* ParameterValue);
extern bool ASAP3_EXPORT CALL_CONV Asap3DiagSetRawParameter(TAsap3Hdl hdl,TAsap3DiagHdl hDiag,char* ParameterName,unsigned char* ParameterValue,DWORD Size);
extern bool ASAP3_EXPORT CALL_CONV Asap3DiagSetNumericParameter(TAsap3Hdl hdl,TAsap3DiagHdl hDiag,char* ParameterName,struct DiagNumericParameter *Parameter);
extern bool ASAP3_EXPORT CALL_CONV Asap3DiagGetResponseCount(TAsap3Hdl hdl,TAsap3DiagHdl hDiag,unsigned int *Count);
extern bool ASAP3_EXPORT CALL_CONV Asap3DiagIsPositiveResponse(TAsap3Hdl hdl,TAsap3DiagHdl hDiag,long ResponseID,int *IsPositive);
extern bool ASAP3_EXPORT CALL_CONV Asap3DiagGetResponseStream(TAsap3Hdl hdl,TAsap3DiagHdl hDiag,unsigned char* Stream,DWORD *Size,long ResponseID);
extern bool ASAP3_EXPORT CALL_CONV Asap3DiagGetStringResponseParameter(TAsap3Hdl hdl,TAsap3DiagHdl hDiag,char *name,long ResponseID,char *Data,DWORD *Size);
extern bool ASAP3_EXPORT CALL_CONV Asap3DiagGetRawResponseParameter(TAsap3Hdl hdl,TAsap3DiagHdl hDiag,char *name,long ResponseID,unsigned char *Data,DWORD *Size);
extern bool ASAP3_EXPORT CALL_CONV Asap3DiagGetNumericResponseParameter(TAsap3Hdl hdl,TAsap3DiagHdl hDiag,char *name,long ResponseID,struct DiagNumericParameter *);
extern bool ASAP3_EXPORT CALL_CONV Asap3DiagIsComplexResponseParameter(TAsap3Hdl hdl,TAsap3DiagHdl hDiag,char *name,long ResponseID,int *IsComplex);
extern bool ASAP3_EXPORT CALL_CONV Asap3DiagGetComplexNumericResponseParameter(TAsap3Hdl hdl,TAsap3DiagHdl hDiag,char *name,long ResponseID,char *SubParameter,unsigned long InterationIndex,struct DiagNumericParameter *Parameter);
extern bool ASAP3_EXPORT CALL_CONV Asap3DiagGetComplexStringResponseParameter(TAsap3Hdl hdl,TAsap3DiagHdl hDiag,char *name,long ResponseID,char *SubParameter,unsigned long InterationIndex,char *Data,DWORD *Size);
extern bool ASAP3_EXPORT CALL_CONV Asap3DiagGetComplexRawResponseParameter(TAsap3Hdl hdl,TAsap3DiagHdl hDiag,char *name,long ResponseID,char *SubParameter,unsigned long InterationIndex,char *Data,DWORD *Size);
extern bool ASAP3_EXPORT CALL_CONV Asap3DiagGetResponseCode(TAsap3Hdl hdl,TAsap3DiagHdl hDiag,long ResponseID,unsigned char *Code);
extern bool ASAP3_EXPORT CALL_CONV Asap3DiagGetComplexIterationCount(TAsap3Hdl hdl,TAsap3DiagHdl hDiag,char *Parameter,long ResponseID,unsigned long *Iteration);
bool ASAP3_EXPORT CALL_CONV Asap3LoadCNAFile(TAsap3Hdl hdl,char* configFileName);
extern bool ASAP3_EXPORT CALL_CONV Asap3GetCNAFilename(TAsap3Hdl hdl,char *FileName,unsigned int *Size);