ctypes_canapedll/CANapAPI.py


# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 942
if _libs["CANapAPI64.dll"].has("Asap3GetScriptResultString", "stdcall"):
    Asap3GetScriptResultString = _libs["CANapAPI64.dll"].get("Asap3GetScriptResultString", "stdcall")
    Asap3GetScriptResultString.argtypes = [TAsap3Hdl, TScriptHdl, String, POINTER(DWORD)]
    Asap3GetScriptResultString.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 943
if _libs["CANapAPI64.dll"].has("Asap3ReleaseScript", "stdcall"):
    Asap3ReleaseScript = _libs["CANapAPI64.dll"].get("Asap3ReleaseScript", "stdcall")
    Asap3ReleaseScript.argtypes = [TAsap3Hdl, TScriptHdl]
    Asap3ReleaseScript.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 944
if _libs["CANapAPI64.dll"].has("Asap3DiagEnableTesterPresent", "stdcall"):
    Asap3DiagEnableTesterPresent = _libs["CANapAPI64.dll"].get("Asap3DiagEnableTesterPresent", "stdcall")
    Asap3DiagEnableTesterPresent.argtypes = [TAsap3Hdl, TModulHdl, c_bool]
    Asap3DiagEnableTesterPresent.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 945
if _libs["CANapAPI64.dll"].has("Asap3DiagIsTesterPresentEnabled", "stdcall"):
    Asap3DiagIsTesterPresentEnabled = _libs["CANapAPI64.dll"].get("Asap3DiagIsTesterPresentEnabled", "stdcall")
    Asap3DiagIsTesterPresentEnabled.argtypes = [TAsap3Hdl, TModulHdl, POINTER(c_bool)]
    Asap3DiagIsTesterPresentEnabled.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 946
if _libs["CANapAPI64.dll"].has("Asap3DiagExecuteJob", "stdcall"):
    Asap3DiagExecuteJob = _libs["CANapAPI64.dll"].get("Asap3DiagExecuteJob", "stdcall")
    Asap3DiagExecuteJob.argtypes = [TAsap3Hdl, TModulHdl, String, String, c_bool, POINTER(POINTER(struct_DiagJobResponse))]
    Asap3DiagExecuteJob.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 947
if _libs["CANapAPI64.dll"].has("Asap3DiagCreateRawRequest", "stdcall"):
    Asap3DiagCreateRawRequest = _libs["CANapAPI64.dll"].get("Asap3DiagCreateRawRequest", "stdcall")
    Asap3DiagCreateRawRequest.argtypes = [TAsap3Hdl, TModulHdl, POINTER(c_ubyte), c_uint, POINTER(TAsap3DiagHdl)]
    Asap3DiagCreateRawRequest.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 948
if _libs["CANapAPI64.dll"].has("Asap3DiagCreateRawRequest2", "stdcall"):
    Asap3DiagCreateRawRequest2 = _libs["CANapAPI64.dll"].get("Asap3DiagCreateRawRequest2", "stdcall")
    Asap3DiagCreateRawRequest2.argtypes = [TAsap3Hdl, TModulHdl, POINTER(c_ubyte), c_uint, POINTER(TAsap3DiagHdl)]
    Asap3DiagCreateRawRequest2.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 949
if _libs["CANapAPI64.dll"].has("Asap3DiagCreateSymbolicRequest", "stdcall"):
    Asap3DiagCreateSymbolicRequest = _libs["CANapAPI64.dll"].get("Asap3DiagCreateSymbolicRequest", "stdcall")
    Asap3DiagCreateSymbolicRequest.argtypes = [TAsap3Hdl, TModulHdl, String, POINTER(TAsap3DiagHdl)]
    Asap3DiagCreateSymbolicRequest.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 951
if _libs["CANapAPI64.dll"].has("Asap3DiagExecute", "stdcall"):
    Asap3DiagExecute = _libs["CANapAPI64.dll"].get("Asap3DiagExecute", "stdcall")
    Asap3DiagExecute.argtypes = [TAsap3Hdl, TAsap3DiagHdl, c_int]
    Asap3DiagExecute.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 952
if _libs["CANapAPI64.dll"].has("Asap3DiagGetServiceState", "stdcall"):
    Asap3DiagGetServiceState = _libs["CANapAPI64.dll"].get("Asap3DiagGetServiceState", "stdcall")
    Asap3DiagGetServiceState.argtypes = [TAsap3Hdl, TAsap3DiagHdl, POINTER(enum_eServiceStates)]
    Asap3DiagGetServiceState.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 953
if _libs["CANapAPI64.dll"].has("Asap3DiagReleaseService", "stdcall"):
    Asap3DiagReleaseService = _libs["CANapAPI64.dll"].get("Asap3DiagReleaseService", "stdcall")
    Asap3DiagReleaseService.argtypes = [TAsap3Hdl, TAsap3DiagHdl]
    Asap3DiagReleaseService.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 954
if _libs["CANapAPI64.dll"].has("Asap3DiagSetStringParameter", "stdcall"):
    Asap3DiagSetStringParameter = _libs["CANapAPI64.dll"].get("Asap3DiagSetStringParameter", "stdcall")
    Asap3DiagSetStringParameter.argtypes = [TAsap3Hdl, TAsap3DiagHdl, String, String]
    Asap3DiagSetStringParameter.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 955
if _libs["CANapAPI64.dll"].has("Asap3DiagSetRawParameter", "stdcall"):
    Asap3DiagSetRawParameter = _libs["CANapAPI64.dll"].get("Asap3DiagSetRawParameter", "stdcall")
    Asap3DiagSetRawParameter.argtypes = [TAsap3Hdl, TAsap3DiagHdl, String, POINTER(c_ubyte), DWORD]
    Asap3DiagSetRawParameter.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 956
if _libs["CANapAPI64.dll"].has("Asap3DiagSetNumericParameter", "stdcall"):
    Asap3DiagSetNumericParameter = _libs["CANapAPI64.dll"].get("Asap3DiagSetNumericParameter", "stdcall")
    Asap3DiagSetNumericParameter.argtypes = [TAsap3Hdl, TAsap3DiagHdl, String, POINTER(struct_DiagNumericParameter)]
    Asap3DiagSetNumericParameter.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 957
if _libs["CANapAPI64.dll"].has("Asap3DiagGetResponseCount", "stdcall"):
    Asap3DiagGetResponseCount = _libs["CANapAPI64.dll"].get("Asap3DiagGetResponseCount", "stdcall")
    Asap3DiagGetResponseCount.argtypes = [TAsap3Hdl, TAsap3DiagHdl, POINTER(c_uint)]
    Asap3DiagGetResponseCount.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 958
if _libs["CANapAPI64.dll"].has("Asap3DiagIsPositiveResponse", "stdcall"):
    Asap3DiagIsPositiveResponse = _libs["CANapAPI64.dll"].get("Asap3DiagIsPositiveResponse", "stdcall")
    Asap3DiagIsPositiveResponse.argtypes = [TAsap3Hdl, TAsap3DiagHdl, c_long, POINTER(c_int)]
    Asap3DiagIsPositiveResponse.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 959
if _libs["CANapAPI64.dll"].has("Asap3DiagGetResponseStream", "stdcall"):
    Asap3DiagGetResponseStream = _libs["CANapAPI64.dll"].get("Asap3DiagGetResponseStream", "stdcall")
    Asap3DiagGetResponseStream.argtypes = [TAsap3Hdl, TAsap3DiagHdl, POINTER(c_ubyte), POINTER(DWORD), c_long]
    Asap3DiagGetResponseStream.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 960
if _libs["CANapAPI64.dll"].has("Asap3DiagGetStringResponseParameter", "stdcall"):
    Asap3DiagGetStringResponseParameter = _libs["CANapAPI64.dll"].get("Asap3DiagGetStringResponseParameter", "stdcall")
    Asap3DiagGetStringResponseParameter.argtypes = [TAsap3Hdl, TAsap3DiagHdl, String, c_long, String, POINTER(DWORD)]
    Asap3DiagGetStringResponseParameter.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 961
if _libs["CANapAPI64.dll"].has("Asap3DiagGetRawResponseParameter", "stdcall"):
    Asap3DiagGetRawResponseParameter = _libs["CANapAPI64.dll"].get("Asap3DiagGetRawResponseParameter", "stdcall")
    Asap3DiagGetRawResponseParameter.argtypes = [TAsap3Hdl, TAsap3DiagHdl, String, c_long, POINTER(c_ubyte), POINTER(DWORD)]
    Asap3DiagGetRawResponseParameter.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 962
if _libs["CANapAPI64.dll"].has("Asap3DiagGetNumericResponseParameter", "stdcall"):
    Asap3DiagGetNumericResponseParameter = _libs["CANapAPI64.dll"].get("Asap3DiagGetNumericResponseParameter", "stdcall")
    Asap3DiagGetNumericResponseParameter.argtypes = [TAsap3Hdl, TAsap3DiagHdl, String, c_long, POINTER(struct_DiagNumericParameter)]
    Asap3DiagGetNumericResponseParameter.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 963
if _libs["CANapAPI64.dll"].has("Asap3DiagIsComplexResponseParameter", "stdcall"):
    Asap3DiagIsComplexResponseParameter = _libs["CANapAPI64.dll"].get("Asap3DiagIsComplexResponseParameter", "stdcall")
    Asap3DiagIsComplexResponseParameter.argtypes = [TAsap3Hdl, TAsap3DiagHdl, String, c_long, POINTER(c_int)]
    Asap3DiagIsComplexResponseParameter.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 964
if _libs["CANapAPI64.dll"].has("Asap3DiagGetComplexNumericResponseParameter", "stdcall"):
    Asap3DiagGetComplexNumericResponseParameter = _libs["CANapAPI64.dll"].get("Asap3DiagGetComplexNumericResponseParameter", "stdcall")
    Asap3DiagGetComplexNumericResponseParameter.argtypes = [TAsap3Hdl, TAsap3DiagHdl, String, c_long, String, c_ulong, POINTER(struct_DiagNumericParameter)]
    Asap3DiagGetComplexNumericResponseParameter.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 965
if _libs["CANapAPI64.dll"].has("Asap3DiagGetComplexStringResponseParameter", "stdcall"):
    Asap3DiagGetComplexStringResponseParameter = _libs["CANapAPI64.dll"].get("Asap3DiagGetComplexStringResponseParameter", "stdcall")
    Asap3DiagGetComplexStringResponseParameter.argtypes = [TAsap3Hdl, TAsap3DiagHdl, String, c_long, String, c_ulong, String, POINTER(DWORD)]
    Asap3DiagGetComplexStringResponseParameter.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 966
if _libs["CANapAPI64.dll"].has("Asap3DiagGetComplexRawResponseParameter", "stdcall"):
    Asap3DiagGetComplexRawResponseParameter = _libs["CANapAPI64.dll"].get("Asap3DiagGetComplexRawResponseParameter", "stdcall")
    Asap3DiagGetComplexRawResponseParameter.argtypes = [TAsap3Hdl, TAsap3DiagHdl, String, c_long, String, c_ulong, String, POINTER(DWORD)]
    Asap3DiagGetComplexRawResponseParameter.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 967
if _libs["CANapAPI64.dll"].has("Asap3DiagGetResponseCode", "stdcall"):
    Asap3DiagGetResponseCode = _libs["CANapAPI64.dll"].get("Asap3DiagGetResponseCode", "stdcall")
    Asap3DiagGetResponseCode.argtypes = [TAsap3Hdl, TAsap3DiagHdl, c_long, POINTER(c_ubyte)]
    Asap3DiagGetResponseCode.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 968
if _libs["CANapAPI64.dll"].has("Asap3DiagGetComplexIterationCount", "stdcall"):
    Asap3DiagGetComplexIterationCount = _libs["CANapAPI64.dll"].get("Asap3DiagGetComplexIterationCount", "stdcall")
    Asap3DiagGetComplexIterationCount.argtypes = [TAsap3Hdl, TAsap3DiagHdl, String, c_long, POINTER(c_ulong)]
    Asap3DiagGetComplexIterationCount.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 969
if _libs["CANapAPI64.dll"].has("Asap3LoadCNAFile", "stdcall"):
    Asap3LoadCNAFile = _libs["CANapAPI64.dll"].get("Asap3LoadCNAFile", "stdcall")
    Asap3LoadCNAFile.argtypes = [TAsap3Hdl, String]
    Asap3LoadCNAFile.restype = c_bool

# C:\\Users\\sim\\Desktop\\canapePY_COM\\ctypes_canapedll_002\\CANapAPI_stripped.h: 970
if _libs["CANapAPI64.dll"].has("Asap3GetCNAFilename", "stdcall"):
    Asap3GetCNAFilename = _libs["CANapAPI64.dll"].get("Asap3GetCNAFilename", "stdcall")
    Asap3GetCNAFilename.argtypes = [TAsap3Hdl, String, POINTER(c_uint)]
    Asap3GetCNAFilename.restype = c_bool
